Upper part is good but the lower one needs to be corrected since it is not responsive at all.

--- a/styles/index.css
+++ b/styles/index.css
@@ -21,34 +21,35 @@
 body{
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
+    /* display: grid; */
+    /* flex-direction: column; */
     background-color: rgba(209, 209, 209, 0.788);
-
+    position: absolute;
     /* overflow: hidden; */
 }
 
 /* This is the upper black div part... */
 .upper_back {
     height: 50vh;
-    width: 100%;
+    width: 100vw;
     background: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
+    /* position: absolute; */
     color: white;
 }
 
 .names {
     margin-top: 5%;
-    margin-left: 15%;
-    width: 40%;
+    margin-left: 10%;
+    width: 50%;
     height: fit-content;
     /* background: green; */
 }
 
 .names > #name {
     font-family: Headings;
-    font-size: 40px;
+    font-size: 50px;
     text-align: right;
     /* background: brown; */
 }
@@ -64,7 +65,7 @@ body{
 .bible_line {
     height: fit-content;
     margin-top: 3%;
-    margin-left: 5%;
+    margin-left: 10%;
     width: 50%;
     font-family: VerseFont;
     font-size: 15px;
@@ -83,20 +84,29 @@ body{
 }
 
 .image {
-    margin-top: -32.523%;
-    margin-left: 55%;
+    position: absolute;
+    width: fit-content;
+    border-radius: 15%;
+    padding: 0;
+    margin-left: 60%;
+    /* background: pink; */
 }
 
 .image > img {
-    height: 11%;
+    height: 50vh;
     width: fit-content;
 }
 /* ...the end of the upper black part (div). */
 
+
+/* -------------------------------------------------------------- */
+
+
+
 /* This is the lower brighter color... */
 .lower_back {
     height: 50vh;
-    width: 100%;
+    width: 100vw;
     background:rgb(199, 199, 199);
     display: flex;
 }
@@ -113,6 +123,37 @@ body{
     margin-top: 4.2%;
     margin-left: 13%;
     /* background: orchid; */
+}
+
+.project_box {
+    /* display: inline-flex;
+    flex-wrap: nowrap; */
+    position: absolute;
+    /* width: fit-content; */
+    margin-top: 10%;
+    margin-left: 0%;
+    background: cyan;
+}
+
+#proj1, #proj2, #proj3 {
+    height: 10em;
+    width: 12em;
+    border: 5px solid #000000;
+    border-radius: 20%;
+    position: absolute;
+    background: #000000;
+}
+
+#proj1 {
+    margin-left: 1em;
+}
+
+#proj2 {
+    margin-left: 14em;
+}
+
+#proj3 {
+    margin-left: 27em;
 }
 
 .vl {
@@ -185,3 +226,6 @@ body{
     height: 30%;
 }
 /* ...this is the end of the lower brighter part. */
+
+
+/* The website is not responsive at the moment */
